@@ -18,6 +18,8 @@
 
   - New style for card headers
 
+  - New style for buttons
+
 - New Palette based on a work by Tobias Bernard for the Fractal application
 
   - Color that aren't based on semantics
